[tool.poetry]
name = "biobionews"
version = "0.1.0"
description = "Lector de noticias en linea de comandos"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brianl9995/biobionews"
repository = "https://github.com/brianl9995/biobionews"
authors = ["Brian <bl0883002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"

[tool.poetry.scripts]
biobionews = "biobionews.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["biobionews"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
